# Zero

./: .gitignore  CMakeLists.txt  ResourcesManager.cpp  Zero.sln  Zero.vcxproj  Zero.vcxproj.filters  imgui.ini  main.cpp
Engine/: CMakeLists.txt
Engine/src/: main.cpp
Engine/src/core/: Components.h  Game.cpp  Scene.h  ScenePlay.cpp  ScenePlay.h  TileSheetSystem.cpp  TileSheetSystem.h
Engine/src/resources/: ResourcesManager.h
Engine/src/system/: AnimationSystem.h  CameraSystem.cpp  CameraSystem.h  InputSystem.cpp  InputSystem.h  PhysicSystem.cpp  RenderSystem.cpp  RenderSystem.h
Engine/src/utilities/: Logger.cpp  Logger.h  Vec2.cpp  Vec2.h
Game/: CMakeLists.txt
include/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_sdl3.h
src/: main.cpp
src/config/: ApplicationConfig.h
src/core/: Component.h  Components.h  Game.cpp  Game.h  Scene.h  ScenePlay.cpp  ScenePlay.h  Window.cpp  Window.h
src/resources/: ResourcesManager.cpp  ResourcesManager.h
src/system/: AnimationSystem.cpp  AnimationSystem.h  InputSystem.cpp  InputSystem.h  PhysicSystem.cpp  PhysicSystem.h  RenderSystem.cpp  RenderSystem.h
src/ultilities/: Logger.cpp  Logger.h  Vec2.cpp
src/utilities/: Logger.cpp  Logger.h  Vec2.h
